<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/small_m_top">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_m_top"
        android:text="@string/filter_characters"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_choose_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_m_top"
        android:paddingHorizontal="@dimen/radio_padding"
        android:text="@string/choose_status"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <RadioGroup
        android:id="@+id/rg_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/radio_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_status">

        <RadioButton
            android:id="@+id/rb_alive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_alive"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/unknown"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/status_dead"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />


    </RadioGroup>

    <TextView
        android:id="@+id/tv_choose_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_m_top"
        android:paddingHorizontal="@dimen/radio_padding"
        android:text="@string/choose_gender"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rg_status" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/radio_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_gender">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/female"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_genderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/genderless"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_gender_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/unknown"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />


</androidx.constraintlayout.widget.ConstraintLayout>