<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:padding="8dp"
    tools:context=".ui.details.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_first_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/name"
            android:textColor="@color/grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Rick Morty" />

        <TextView
            android:id="@+id/tv_second_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/gender"
            android:textColor="@color/grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Male" />

        <TextView
            android:id="@+id/tv_third_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/status"
            android:textColor="@color/grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Alive" />

        <TextView
            android:id="@+id/tv_fourth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/species"
            android:textColor="@color/grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Human" />

        <TextView
            android:id="@+id/tv_fifth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:text="@string/location"
            android:textColor="@color/grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_m_top"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Citadel of Ricks" />
    </LinearLayout>
</ScrollView>